# arpass-spec

./: BUILD-HASHES.md  CONTRIBUTING.md  LICENSE  README.en.md  README.md  SECURITY.md  arpass-emergency-restore.html
docs/: arweave-tags.md  business-mode-design.md  crypto-2of3.md  crypto-rationale.md  envelope-v4.md  envelope-v5.md  envelope-v7-spec.md  envelope-v7.md  implementation-status.md  manual-recovery.md  phase-7.2-B-server-wrap.md  phase-7.3-A-non-extractable.md  rust-crypto-opaque-handle.md  rust-crypto-stage1.md  security-baseline.md  yubikey-outer-key-redesign.md
docs/en/: arweave-tags.md  crypto-rationale.md  envelope-v5.md  envelope-v7.md
lib/: app-main.js  client-auth.js  emergency-recover-purejs.js  emergency-restore-main.js  i18n.js  idb-cache.js  local-cache.js  profiles.js  vault-client.js  vault-crypto.js
lib/rust-crypto/: arpass_crypto.js
pages/: arpass-emergency-restore.html
pages/lib/: client-auth.js  emergency-recover-purejs.js  emergency-restore-main.js  local-cache.js  profiles.js  vault-client.js  vault-crypto.js
pages/lib/rust-crypto/: arpass_crypto_bg.wasm
rust-crypto/: Cargo.toml  README.md
rust-crypto/src/: lib.rs
tools/: README-personal-recovery.md  README-yubikey-recovery.md  recover-personal.py  recover-yubikey.py  requirements.txt
